<resources>
    <!--Важное содержимое, изменять с осторожностью-->
    <string name="kr_script_config">kr-script.conf</string>

    <!--Принудительно запрашивать ROOT-->
    <bool name="force_root">false</bool>

    <string name="app_name">DNA-Android</string>
    <string name="btn_exit">Выход</string>
    <string name="float_monitor_tips">Дважды нажмите на плавающее окно, чтобы закрыть, или удерживайте и перетаскивайте для изменения положения</string>
    <string name="permission_float">Пожалуйста, предоставьте разрешение на отображение поверх других окон!</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="title_activity_action_page">Страницы функций</string>

    <string name="author_name">SlakkyStar</string>
    <string name="about_title">О программе · DNA</string>
    <string name="appliction_desc">Это демонстрационное приложение фреймворка</string>
    <string name="appliction_name">DNA Демо-фреймворк</string>
    <string name="appliction_author">Slakkystar</string>
    <string name="engine_version_name">Создано на базе [Kr-Script4.0.3]</string>

    <string name="tab_home">Главная</string>
    <string name="tab_favorites">Избранное</string>
    <string name="tab_pages">Другое</string>

    <string name="monitor_laod">Нагрузка: %d%%</string>
    <string name="monitor_core_count">%d ядер</string>
    <string name="monitor_cache_cleared">Кэш-память освобождена</string>
    <string name="monitor_ram_cleared">Фрагментация ОЗУ устранена</string>

    <string name="copy_success">Скопировано успешно</string>
    <string name="btn_retry">Повторить</string>

    <string name="pio_starting">DNA·ЗАПУСК</string>
    <string name="pop_before_start">Подготовка к запуску приложения…</string>
    <string name="pop_started">Запуск завершён!</string>
    <string name="pio_permission_checking">Проверка и получение необходимых разрешений……</string>
    <string name="error_root">Не удалось получить ROOT-доступ. Если ваше устройство имеет ROOT, выберите «Разрешить» при появлении диалогового окна в менеджере разрешений!</string>
    <string name="error_su_timeout">Время ожидания ROOT-доступа истекло, проверьте, запущен ли менеджер разрешений в фоновом режиме!</string>
    <string name="transparent_ui">Прозрачный интерфейс</string>
    <string name="title_activity_file_selector">Пожалуйста, выберите файл</string>
    <string name="title_activity_folder_selector">Пожалуйста, используйте долгое нажатие для выбора папки</string>

    <string name="power_shutdown_cmd">sync;svc power shutdown || reboot -p;</string>
    <string name="power_reboot_cmd">sync;svc power reboot || reboot;</string>
    <string name="power_hot_reboot_cmd">sync;am restart || busybox killall system_server;</string>
    <string name="power_fastboot_cmd">sync;reboot bootloader;</string>
    <string name="power_recovery_cmd">sync;reboot recovery;</string>
    <string name="power_emergency_cmd">sync;reboot edl;</string>
    <string name="Startup_file_selection_erreo">Не удалось запустить встроенный выбор файлов</string>

    <string name="home_mem">ОЗУ</string>
    <string name="home_swap">swap</string>
    <string name="file_error">В этой папке нет файлов!</string>
    
    <string name="tab_instructions">Инструкции</string>
    
    <string name="power_select_action">Выберите действие</string>
    <string name="power_shutdown">Выключение</string>
    <string name="power_shutdown_normal">Обычное выключение</string>
    <string name="power_reboot">Перезагрузка</string>
    <string name="power_reboot_normal">Обычная перезагрузка</string>
    <string name="power_reboot_hot">Горячая перезагрузка</string>
    <string name="power_reboot_hot_desc">Перезапуск только системного интерфейса без перезагрузки системы (может вызвать ошибки)</string>
    <string name="power_reboot_recovery_desc">Перезагрузка в Recovery (режим восстановления)</string>
    <string name="power_reboot_fastboot_desc">Перезагрузка в Fastboot (режим прошивки по USB)</string>
    <string name="power_reboot_edl_desc">Перезагрузка в режим 9008, *этот режим доступен только на некоторых устройствах Snapdragon</string>
    <string name="home_physical_memory">Физическая память</string>
    <string name="home_swap_partition">Раздел подкачки</string>
    <string name="home_cpu_cores">Количество ядер</string>
</resources>