<?xml version="1.0" encoding="utf-8"?>
<com.omarea.common.ui.OverScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:alpha="0.85"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical">

        <TextView
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            style="@style/textDefault"
            android:text="@string/power_select_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="65dp"
                android:background="@drawable/krscript_item_ripple"
                android:id="@+id/power_shutdown"
                style="@style/ListCardItemSmall"
                android:orientation="horizontal">

                <ImageView
                    android:alpha="0.8"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerInside"
                    android:src="@drawable/power_shutdown"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:background="@drawable/action_menu_icon_bg"
                    app:tint="#ffffff" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textTitle"
                        android:layout_marginBottom="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/power_shutdown" />

                    <TextView
                        style="@style/textSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/power_shutdown_normal" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="65dp"
                android:background="@drawable/krscript_item_ripple"
                android:id="@+id/power_reboot"
                style="@style/ListCardItemSmall"
                android:orientation="horizontal">

                <ImageView
                    android:alpha="0.8"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerInside"
                    android:src="@drawable/power_reboot"
                    android:background="@drawable/action_menu_icon_bg"
                    android:backgroundTint="#8BC34A"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    app:tint="#ffffff" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textTitle"
                        android:layout_marginBottom="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/power_reboot" />

                    <TextView
                        style="@style/textSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/power_reboot_normal" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="65dp"
            android:background="@drawable/krscript_item_ripple"
            android:id="@+id/power_hot_reboot"
            style="@style/ListCardItemSmall"
            android:orientation="horizontal">

            <ImageView
                android:alpha="0.8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/power_hot_reboot"
                android:background="@drawable/action_menu_icon_bg"
                android:backgroundTint="#00BCD4"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:tint="#ffffff" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/textTitle"
                    android:layout_marginBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/power_reboot_hot" />

                <TextView
                    style="@style/textSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/power_reboot_hot_desc" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="65dp"
            android:background="@drawable/krscript_item_ripple"
            android:id="@+id/power_recovery"
            style="@style/ListCardItemSmall"
            android:orientation="horizontal">

            <ImageView
                android:alpha="0.8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/power_recovery"
                android:background="@drawable/action_menu_icon_bg"
                android:backgroundTint="#C8787878"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:tint="#ffffff" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/textTitle"
                    android:layout_marginBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Recovery" />

                <TextView
                    style="@style/textSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/power_reboot_recovery_desc" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="65dp"
            android:background="@drawable/krscript_item_ripple"
            android:id="@+id/power_fastboot"
            style="@style/ListCardItemSmall"
            android:orientation="horizontal">

            <ImageView
                android:alpha="0.8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/power_fastboot"
                android:background="@drawable/action_menu_icon_bg"
                android:backgroundTint="#C8787878"
                android:padding="10dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:tint="#ffffff" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/textTitle"
                    android:layout_marginBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fastboot" />

                <TextView
                    style="@style/textSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/power_reboot_fastboot_desc" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="65dp"
            android:background="@drawable/krscript_item_ripple"
            android:id="@+id/power_emergency"
            style="@style/ListCardItemSmall"
            android:orientation="horizontal">

            <ImageView
                android:alpha="0.8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/power_emergency"
                android:padding="11dp"
                android:background="@drawable/action_menu_icon_bg"
                android:backgroundTint="#C8787878"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:tint="#ffffff" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/textTitle"
                    android:layout_marginBottom="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="9008(EDL)" />

                <TextView
                    style="@style/textSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/power_reboot_edl_desc" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.omarea.common.ui.OverScrollView>
